--- a/README.rdoc
+++ b/README.rdoc
@@ -6,10 +6,10 @@ http://www.r-labs.org/wiki/r-labs/Wiki_Extensions_en
 
 === Plugin installation
 
-1. Copy the plugin directory into the vendor/plugins directory
+1. Copy the plugin directory into the plugins directory
 
 2. Migrate plugin:
-   rake db:migrate_plugins RAILS_ENV=production
+   rake redmine:plugins:migrate RAILS_ENV=production
 
 3. Start Redmine
 
